contents added test.html

--- a/test.html
+++ b/test.html
@@ -55,7 +55,36 @@
 
 </section>
 <section id="contact">
-
+    <p style="
+        font-size: 24px;
+        margin-bottom: 0px;
+        padding-top: 5vh;
+        padding-bottom: 5vh;
+    ">We are Developers</p>
+    <div id="contact-container" style="
+        display: flex;
+        flex-wrap: wrap;
+    ">
+        <div class="contact-card">
+            <div style="display: flex;">
+                <div style="
+                    width: 100px;
+                    height: 100px;
+                    background: white;
+                    border-radius: 50px;
+                "></div>
+                <div style="padding-left: 25px;">
+                    <h4>Name</h4>
+                    <p style="font-size: 15px;">Add a short description</p>
+                </div>
+            </div>
+            <p>PH : 0123456789</p>
+            <p>Git</p>
+        </div>
+        <div class="contact-card"></div>
+        <div class="contact-card"></div>
+        <div class="contact-card"></div>
+    </div>
 </section>
 <footer>
     <p id="copy"></p>
