--- a/test.html
+++ b/test.html
@@ -52,7 +52,12 @@
     </p>
 </section>
 <section id="projects">
-
+    <p style="
+        font-size: 24px;
+        margin-bottom: 0px;
+        padding-top: 5vh;
+        padding-bottom: 5vh;
+    ">Our Milestones & Portfolio</p>
 </section>
 <section id="contact">
     <p style="
@@ -61,29 +66,52 @@
         padding-top: 5vh;
         padding-bottom: 5vh;
     ">We are Developers</p>
-    <div id="contact-container" style="
-        display: flex;
-        flex-wrap: wrap;
-    ">
-        <div class="contact-card">
-            <div style="display: flex;">
-                <div style="
-                    width: 100px;
-                    height: 100px;
-                    background: white;
-                    border-radius: 50px;
-                "></div>
-                <div style="padding-left: 25px;">
-                    <h4>Name</h4>
-                    <p style="font-size: 15px;">Add a short description</p>
+    <div class="card-container">
+        <div class="card-resp">
+            <div class="card-style">
+                <div style="display: flex;">
+                    <div class="card-dp"></div>
+                    <div style="padding-left: 25px;">
+                        <h4>Name</h4>
+                        <p style="font-size: 15px;">Add a short description</p>
+                    </div>
                 </div>
+                <p>PH : 0123456789</p>
+                <p>Git</p>
+                <text>Add a detailed description if required (optional)</text>
             </div>
-            <p>PH : 0123456789</p>
-            <p>Git</p>
         </div>
-        <div class="contact-card"></div>
-        <div class="contact-card"></div>
-        <div class="contact-card"></div>
+        <div class="card-resp">
+            
+        </div>
+        <div class="card-resp">
+            <div class="card-style">
+                <div style="display: flex;">
+                    <div class="card-dp"></div>
+                    <div style="padding-left: 25px;">
+                        <h4>Name</h4>
+                        <p style="font-size: 15px;">Add a short description</p>
+                    </div>
+                </div>
+                <p>PH : 0123456789</p>
+                <p>Git</p>
+                <text>Add a detailed description if required (optional)</text>
+            </div>
+        </div>
+        <div class="card-resp">
+            <div class="card-style">
+                <div style="display: flex;">
+                    <div class="card-dp"></div>
+                    <div style="padding-left: 25px;">
+                        <h4>Name</h4>
+                        <p style="font-size: 15px;">Add a short description</p>
+                    </div>
+                </div>
+                <p>PH : 0123456789</p>
+                <p>Git</p>
+                <text>Add a detailed description if required (optional)</text>
+            </div>
+        </div>
     </div>
 </section>
 <footer>
