--- a/test.html
+++ b/test.html
@@ -3,8 +3,9 @@
 <head>
     <title>firmtech</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-    <link rel="icon" href="" sizes="any" type="any">
+    <link rel="icon" href="logo.png" sizes="any" type="any">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
@@ -99,46 +100,49 @@
         <div class="card-resp" id="faris">
             <div class="card-style">
                 <div style="display: flex;">
-                    <div class="card-dp"></div>
+                    <div class="card-dp" style="background-image: url(f.jpg);"></div>
                     <div style="padding-left: 25px;">
                         <h4>Faris</h4>
                         <p style="font-size: 15px;">Add a short description</p>
                     </div>
                 </div>
-                <p>PH : 0123456789</p>
-                <p>Git</p>
-                <text>Add a detailed description if required (optional)</text>
-            </div>
-        </div>
-        <div class="card-resp">
-            <div class="card-style">
-                <div style="display: flex;">
-                    <div class="card-dp"></div>
-                    <div style="padding-left: 25px;">
-                        <h4>Name</h4>
-                        <p style="font-size: 15px;">Add a short description</p>
-                    </div>
-                </div>
-                <p>PH : 0123456789</p>
-                <p>Git</p>
+                <p onclick="window.open('tel:+91 85899 48199', '_blank');"><i class="material-icons" style="font-size: 18px;">&#xe0b0;</i> PH: +91 85899 48199</p>
+                <p><i class="material-icons" style="font-size: 18px;">&#xe80b;</i> WEB: </p>
+                <p>Git: github.com/fariskh</p>
                 <text>Add a detailed description if required (optional)</text>
             </div>
         </div>
         <div class="card-resp" id="rishad">
             <div class="card-style">
                 <div style="display: flex;">
-                    <div class="card-dp"></div>
+                    <div class="card-dp" style="background-image: url(r.jpg);"></div>
                     <div style="padding-left: 25px;">
                         <h4>Rishad</h4>
-                        <p style="font-size: 15px;">Add a short description</p>
+                        <p style="font-size: 15px;">Web developer</p>
                     </div>
                 </div>
-                <p>PH : 0123456789</p>
-                <p>Git</p>
-                <text>Add a detailed description if required (optional)</text>
+                <p onclick="window.open('tel:+91 85928 97844', '_blank');"><i class="material-icons" style="font-size: 18px;">&#xe0b0;</i> PH: +91 85928 97844</p>
+                <p onclick="window.open('https://rishad-p.github.io/', '_blank');"><i class="material-icons" style="font-size: 18px;">&#xe80b;</i> WEB: rishad-p.github.io</p>
+                <p>Git: github.com/rishad-p</p>
+                <text>i'm passionate and specialized in animated ui-ux in modern web development world. and i'm a part time coder</text>
             </div>
         </div>
         <div class="card-resp">
+            <div class="card-style">
+                <div style="display: flex;">
+                    <div class="card-dp" style="background-image: url(m.jpg);"></div>
+                    <div style="padding-left: 25px;">
+                        <h4>Musafar</h4>
+                        <p style="font-size: 15px;">Add a short description</p>
+                    </div>
+                </div>
+                <p onclick="window.open('tel:+971 58 130 2527', '_blank');"><i class="material-icons" style="font-size: 18px;">&#xe0b0;</i> PH: +971 58 130 2527</p>
+                <p onclick="window.open('http://13.48.83.133:8004/', '_blank');"><i class="material-icons" style="font-size: 18px;">&#xe80b;</i> WEB: 13.48.83.133:8004</p>
+                <p>Git: github.com/muzafirsakeen</p>
+                <text>Add a detailed description if required (optional)</text>
+            </div>
+        </div>
+<!--         <div class="card-resp">
             <div class="card-style">
                 <div style="display: flex;">
                     <div class="card-dp"></div>
@@ -147,11 +151,11 @@
                         <p style="font-size: 15px;">Add a short description</p>
                     </div>
                 </div>
-                <p>PH : 0123456789</p>
-                <p>Git</p>
+                <p><i class="material-icons" style="font-size: 18px;">&#xe0b0;</i> PH : 0123456789</p>
+                <p>GitHub</p>
                 <text>Add a detailed description if required (optional)</text>
             </div>
-        </div>
+        </div> -->
     </div>
 </section>
 <footer>
