--- a/index.html
+++ b/index.html
@@ -52,11 +52,6 @@
             more
         </button>
     </section>
-    <section id="about">
-        <p style="font-size: 24px;">
-            .....................
-        </p>
-    </section>
     <section id="services">
         <p>
             We provides web applications, softwares and <br />
@@ -74,21 +69,16 @@
     ">Our Milestones & Portfolio</p>
         <div class="card-container">
             <div class="card-resp">
-                <p align="center" style="font-size: 20px;">UI UX Designs</p>
+                <p align="center" style="font-size: 20px;">What we focused on</p>
                 <ul>
-                    <li><a href="https://rishad-p.github.io/portfolio/animated-circle" target="_blank">Animated
-                            circle</a></li>
-                    <li><a href="https://rishad-p.github.io/portfolio/animated-squares" target="_blank">Animated
-                            squares</a></li>
-                    <li><a href="https://rishad-p.github.io/portfolio/two-animated-squares" target="_blank">Two animated
-                            squares</a></li>
-                    <li><a href="https://rishad-p.github.io/portfolio/bottom-navigator"
-                            target="_blank">bottom-navigator</a></li>
-
-                    <li><a href="https://rishad-p.github.io/portfolio/material" target="_blank">Material</a></li>
-                    <li><a href="https://rishad-p.github.io/portfolio/bootstrap" target="_blank">bootstrap</a></li>
-                    <li><a href="https://rishad-p.github.io/portfolio/WordPress" target="_blank">A WordPress theme</a>
-                    </li>
+                    <ul>
+                        <p>Websites</p>
+                        <p>Android Apps</p>
+                        <p>Voice call applications</p>
+                        <p>Video call applications</p>
+                        <p>Chat applications</p>
+                        <p>Other server side setups</p>
+                    </ul>
                 </ul>
             </div>
             <div class="card-resp">
