session implimentation in login module

--- a/chat/index.html
+++ b/chat/index.html
@@ -22,8 +22,10 @@
         const analytics = getAnalytics(app);
         firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
-        // console.log(db);
 
+        if (sessionStorage.getItem("user_id") == null) {
+            window.location.href = "login.htm";
+        }
 
         async function fetch_collection(collection) {
             const querySnapshot = await db.collection(collection).get();
@@ -37,14 +39,29 @@
 
         console.log(JSON.stringify(await fetch_collection("messages")));
 
-        if (false) {
-            
+        if (sessionStorage.getItem("user_id") !== null) {
+            users = await fetch_collection("users").then((users) => {
+                const user = users.find(user => user.id === sessionStorage.getItem("user_id"));
+                // user 
+                console.log("Welcome " + JSON.stringify(user));
+            });
         }
         else {
             window.location.href = "login.htm"
         }
 
+
+
     </script>
 </head>
-
+<body>
+    
+    <button onclick="logout();">logout</button>
+    <script type="text/javascript">
+        function logout(){
+            sessionStorage.removeItem("user_id");
+            window.location.href = "login.htm";
+        }
+    </script>
+</body>
 </html>
