--- a/chat/login.htm
+++ b/chat/login.htm
@@ -16,6 +16,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore-compat.js"></script>
     <script src="scripts/firebase-config.js"></script>
+	<script src="scripts/main.js"></script>
 </head>
 <body class="login-body">
 	<div class="login-left-div material-icons">&#xe0bf;</div>
@@ -51,7 +52,7 @@
 			<label class="mdc-text-field mdc-text-field--filled signup-display-visible">
 				<span class="mdc-text-field__ripple"></span>
 				<span class="mdc-floating-label">New Username</span>
-				<input class="mdc-text-field__input" type="text" id="ctrate-username" onkeyup="validate_signup();">
+				<input class="mdc-text-field__input" type="text" id="create-username" onkeyup="validate_signup();">
 				<span class="mdc-line-ripple"></span>
 			</label>
 			<br>
@@ -75,6 +76,6 @@
 			</button>
 		</div>
 	</div>
-	<script src="scripts/main.js"></script>
+	<script src="scripts/login.js"></script>
 </body>
 </html>
