Some structure changes

--- a/chat/index.html
+++ b/chat/index.html
@@ -4,8 +4,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore-compat.js"></script>
-    <script type="module" src="scripts/firebase.js"></script>
-    <script type="module" src="scripts/index.js"></script>
+    <script type="module" src="../scripts/chat-firebase.js"></script>
+    <script type="module" src="../scripts/chat-index.js"></script>
 </head>
 
 <body style="display: none;">
