--- a/chat/login.htm
+++ b/chat/login.htm
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@material/button@14.0.0/dist/mdc.button.min.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="../styles/chat-login.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 	<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
@@ -15,8 +15,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@material/button@14.0.0/dist/mdc.button.min.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/10.13.1/firebase-app-compat.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore-compat.js"></script>
-	<script type="module" src="scripts/firebase.js"></script>
-	<script type="module" src="scripts/login.js"></script>
+	<script type="module" src="../scripts/chat-firebase.js"></script>
+	<script type="module" src="../scripts/chat-login.js"></script>
 </head>
 <body class="login-body" onload="load();">
 	<div id="progress-bar" role="progressbar" class="mdc-linear-progress mdc-linear-progress--indeterminate">
