chat window structure created

--- a/chat/index.html
+++ b/chat/index.html
@@ -10,6 +10,7 @@
 
 <body style="display: none;">
     <button onclick="logout();">logout</button>
+    <object type="text/html" data="login.htm"></object>
 </body>
 
 </html>
